--- a/index.html
+++ b/index.html
@@ -22,30 +22,26 @@
 <!--    </nav>-->
 <!--</header>-->
 <div class="container">
-    <h1 class="specialization">Senior/Lead Front-end<span class="main-skills grey">Vue.js, React.js</span></h1>
+    <h1 class="specialization">Senior/Lead Front-end <span class="main-skills grey">(Vue.js, React.js)</span></h1>
     <div id="contacts" class="title">
         <div class="left">
             <h2>Valentyn Gren</h2>
             <div class="ava-wrap">
                 <img src="img/ava-new_square.jpg" class="ava">
-<!--                <div class="ava-info">-->
-<!--                    <p class="left">25 age</p>-->
-<!--                    <p class="right">Odessa</p>-->
-<!--                </div>-->
-            </div>
-            <div class="info">
-                <h4>
-                    <span class="left">Age:</span>
-                    <span>28</span>
-                </h4>
-                <h4>
-                    <span class="left">English:</span>
-                    <span>Intermediate</span>
-                </h4>
-                <h4>
-                    <span class="left">Location:</span>
-                    <span>Remote</span>
-                </h4>
+                <div class="info">
+                    <h4>
+                        <span class="left">Age:</span>
+                        <span>28</span>
+                    </h4>
+                    <h4>
+                        <span class="left">English:</span>
+                        <span>Intermediate</span>
+                    </h4>
+                    <h4>
+                        <span class="left">Location:</span>
+                        <span>Remote</span>
+                    </h4>
+                </div>
             </div>
         </div>
         <div class="right">
@@ -87,10 +83,13 @@
     </div>
     <div id="about-me" class="about-me">
         <p class="about-me_text">
-            I am an experienced front-end developer more than 6 years of commercial experience and Master of Computer Science degree.
+            I am an experienced front-end developer more than 6 years of commercial experience and Master of Computer
+            Science degree.
         </p>
         <p class="about-me_text">
-            I have experience in a lead position and additional to great hard skills I also have good soft skills (communication with customers/product side, organization of processes in my team, preparing product oriented roadmap).
+            I have experience in a lead position and additional to great hard skills I also have good soft skills
+            (communication with customers/product side, organization of processes in my team, preparing product oriented
+            roadmap).
         </p>
     </div>
 
@@ -115,7 +114,114 @@
         </div>
         <div class="row">
             <div class="left selfllery">
-                <svg data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 103.12 103.12"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:none;}.cls-3{fill:#a9da3a;}.cls-10,.cls-11,.cls-12,.cls-13,.cls-14,.cls-15,.cls-16,.cls-17,.cls-18,.cls-3,.cls-4,.cls-5,.cls-6,.cls-7,.cls-8,.cls-9{isolation:isolate;}.cls-4{fill:#49809a;}.cls-5{fill:#7cdb5b;}.cls-6{fill:#b05fe6;}.cls-7{fill:#8560eb;}.cls-8{fill:#7f43f9;}.cls-9{fill:#b233f9;}.cls-10{fill:#c22e2c;}.cls-11{fill:#e9a657;}.cls-12{fill:#e06f27;}.cls-13{fill:#f9eb65;}.cls-14{fill:#fdfa3e;}.cls-15{fill:#f2d049;}.cls-16{fill:#6f9ffb;}.cls-17{fill:#6372fa;}.cls-18{fill:#8362fa;}</style></defs><title>logo</title><path class="cls-1" d="M102.13,61.84l-5.27-5.27V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84ZM63.48,56.57l-6.91,6.91H46.79l-6.91-6.91V46.79l6.91-6.91h9.78l6.91,6.91Z"/><polygon class="cls-2" points="56.57 39.88 46.79 39.88 39.88 46.79 39.88 46.79 39.88 56.57 46.79 63.48 56.57 63.48 63.48 56.57 63.48 46.79 56.57 39.88"/><path class="cls-3" d="M63.48,46.79V25.51a2.32,2.32,0,0,1,2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5V39.88Z"/><path class="cls-4" d="M56.57,39.88l-15-15a2.32,2.32,0,0,1,0-3.29l15-15H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l23.6,23.6Z"/><path class="cls-5" d="M41.52,24.83l15,15V6.5l-15,15A2.32,2.32,0,0,0,41.52,24.83Z"/><path class="cls-6" d="M46.79,39.88H25.51a2.32,2.32,0,0,1-2.32-2.32V16.28l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79H39.88Z"/><path class="cls-7" d="M25.51,39.88H46.79l-23.6-23.6V37.56A2.32,2.32,0,0,0,25.51,39.88Z"/><path class="cls-8" d="M39.88,46.79h0l-15,15a2.32,2.32,0,0,1-3.29,0l-15-15V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l23.6-23.6Z"/><path class="cls-9" d="M24.83,61.84l15-15H6.5l15,15A2.32,2.32,0,0,0,24.83,61.84Z"/><path class="cls-10" d="M46.79,63.48l15,15a2.32,2.32,0,0,1,0,3.29l-15,15H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l-23.6-23.6Z"/><path class="cls-11" d="M102.13,61.84l-5.27-5.27H63.48l-6.91,6.91H77.85a2.32,2.32,0,0,1,2.32,2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84Z"/><path class="cls-12" d="M77.85,63.48H56.57l23.6,23.6V65.81A2.32,2.32,0,0,0,77.85,63.48Z"/><path class="cls-13" d="M63.48,56.57l15-15a2.32,2.32,0,0,1,3.29,0l15,15V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-23.6,23.6Z"/><path class="cls-14" d="M63.48,25.51V46.79l23.6-23.6H65.81A2.32,2.32,0,0,0,63.48,25.51Z"/><path class="cls-15" d="M78.53,41.52l-15,15H96.86l-15-15A2.32,2.32,0,0,0,78.53,41.52Z"/><path class="cls-16" d="M39.88,56.57V77.85a2.32,2.32,0,0,1-2.32,2.32H16.28l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27V63.48Z"/><path class="cls-17" d="M39.88,77.85V56.57l-23.6,23.6H37.56A2.32,2.32,0,0,0,39.88,77.85Z"/><path class="cls-18" d="M61.84,78.53l-15-15V96.86l15-15A2.32,2.32,0,0,0,61.84,78.53Z"/></svg>
+                <svg data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 103.12 103.12">
+                    <defs>
+                        <style>.cls-1 {
+                            fill: #fff;
+                        }
+
+                        .cls-2 {
+                            fill: none;
+                        }
+
+                        .cls-3 {
+                            fill: #a9da3a;
+                        }
+
+                        .cls-10, .cls-11, .cls-12, .cls-13, .cls-14, .cls-15, .cls-16, .cls-17, .cls-18, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-8, .cls-9 {
+                            isolation: isolate;
+                        }
+
+                        .cls-4 {
+                            fill: #49809a;
+                        }
+
+                        .cls-5 {
+                            fill: #7cdb5b;
+                        }
+
+                        .cls-6 {
+                            fill: #b05fe6;
+                        }
+
+                        .cls-7 {
+                            fill: #8560eb;
+                        }
+
+                        .cls-8 {
+                            fill: #7f43f9;
+                        }
+
+                        .cls-9 {
+                            fill: #b233f9;
+                        }
+
+                        .cls-10 {
+                            fill: #c22e2c;
+                        }
+
+                        .cls-11 {
+                            fill: #e9a657;
+                        }
+
+                        .cls-12 {
+                            fill: #e06f27;
+                        }
+
+                        .cls-13 {
+                            fill: #f9eb65;
+                        }
+
+                        .cls-14 {
+                            fill: #fdfa3e;
+                        }
+
+                        .cls-15 {
+                            fill: #f2d049;
+                        }
+
+                        .cls-16 {
+                            fill: #6f9ffb;
+                        }
+
+                        .cls-17 {
+                            fill: #6372fa;
+                        }
+
+                        .cls-18 {
+                            fill: #8362fa;
+                        }</style>
+                    </defs>
+                    <title>logo</title>
+                    <path class="cls-1"
+                          d="M102.13,61.84l-5.27-5.27V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84ZM63.48,56.57l-6.91,6.91H46.79l-6.91-6.91V46.79l6.91-6.91h9.78l6.91,6.91Z"/>
+                    <polygon class="cls-2"
+                             points="56.57 39.88 46.79 39.88 39.88 46.79 39.88 46.79 39.88 56.57 46.79 63.48 56.57 63.48 63.48 56.57 63.48 46.79 56.57 39.88"/>
+                    <path class="cls-3"
+                          d="M63.48,46.79V25.51a2.32,2.32,0,0,1,2.32-2.32H87.09l-22-22a2.32,2.32,0,0,0-3.29,0L56.57,6.5V39.88Z"/>
+                    <path class="cls-4"
+                          d="M56.57,39.88l-15-15a2.32,2.32,0,0,1,0-3.29l15-15H25.51a2.32,2.32,0,0,0-2.32,2.32v7.45l23.6,23.6Z"/>
+                    <path class="cls-5" d="M41.52,24.83l15,15V6.5l-15,15A2.32,2.32,0,0,0,41.52,24.83Z"/>
+                    <path class="cls-6"
+                          d="M46.79,39.88H25.51a2.32,2.32,0,0,1-2.32-2.32V16.28l-22,22a2.32,2.32,0,0,0,0,3.29L6.5,46.79H39.88Z"/>
+                    <path class="cls-7" d="M25.51,39.88H46.79l-23.6-23.6V37.56A2.32,2.32,0,0,0,25.51,39.88Z"/>
+                    <path class="cls-8"
+                          d="M39.88,46.79h0l-15,15a2.32,2.32,0,0,1-3.29,0l-15-15V77.85a2.32,2.32,0,0,0,2.32,2.32h7.45l23.6-23.6Z"/>
+                    <path class="cls-9" d="M24.83,61.84l15-15H6.5l15,15A2.32,2.32,0,0,0,24.83,61.84Z"/>
+                    <path class="cls-10"
+                          d="M46.79,63.48l15,15a2.32,2.32,0,0,1,0,3.29l-15,15H77.85a2.32,2.32,0,0,0,2.32-2.32V87.09l-23.6-23.6Z"/>
+                    <path class="cls-11"
+                          d="M102.13,61.84l-5.27-5.27H63.48l-6.91,6.91H77.85a2.32,2.32,0,0,1,2.32,2.32V87.09l22-22A2.32,2.32,0,0,0,102.13,61.84Z"/>
+                    <path class="cls-12" d="M77.85,63.48H56.57l23.6,23.6V65.81A2.32,2.32,0,0,0,77.85,63.48Z"/>
+                    <path class="cls-13"
+                          d="M63.48,56.57l15-15a2.32,2.32,0,0,1,3.29,0l15,15V25.51a2.32,2.32,0,0,0-2.32-2.32H87.09l-23.6,23.6Z"/>
+                    <path class="cls-14" d="M63.48,25.51V46.79l23.6-23.6H65.81A2.32,2.32,0,0,0,63.48,25.51Z"/>
+                    <path class="cls-15" d="M78.53,41.52l-15,15H96.86l-15-15A2.32,2.32,0,0,0,78.53,41.52Z"/>
+                    <path class="cls-16"
+                          d="M39.88,56.57V77.85a2.32,2.32,0,0,1-2.32,2.32H16.28l22,22a2.32,2.32,0,0,0,3.29,0l5.27-5.27V63.48Z"/>
+                    <path class="cls-17" d="M39.88,77.85V56.57l-23.6,23.6H37.56A2.32,2.32,0,0,0,39.88,77.85Z"/>
+                    <path class="cls-18" d="M61.84,78.53l-15-15V96.86l15-15A2.32,2.32,0,0,0,61.84,78.53Z"/>
+                </svg>
                 <p class="bold company">Selfllery</p>
             </div>
             <div class="right">
@@ -195,7 +301,9 @@
                     <li>Vue CLI, create-react-app</li>
                     <li>React.js, Redux</li>
                     <li>HTML5, CSS3 (SCSS)</li>
-                    <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First, <br> sizes on 'em' with resize or on 'px' with media queries</li>
+                    <li>Responsive, Flexible, PixelPerfect, Mobile First / Desktop First, <br> sizes on 'em' with resize
+                        or on 'px' with media queries
+                    </li>
                     <li>Node.js, npm</li>
                     <li>JQuery</li>
                     <li>Unit tests (Jest) & TDD</li>
@@ -249,7 +357,8 @@
     <div id="portfolio">
         <h2>Projects where I worked <span class="grey"> // small portfolio</span></h2>
         <p>
-            I've worked on 30+ projects in my career. From small Landing pages to big SaaS platforms and social network project.<br>
+            I've worked on 30+ projects in my career. From small Landing pages to big SaaS platforms and social network
+            project.<br>
             Unfortunately, my best projects are no longer in production :(
             <!-- like <a href="https://sellfllery.com">sellfllery.com</a> or <a href="https://станьближе.рф">станьближе.рф</a><br> -->
             <br>
