--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                     <span class="description-stack">The main task for me is to create a new front-end version from scratch with a modern SPA architecture for a product that has already been on the market for 10 years.
                         I am responsible for all new front-end on the project and migration from old front-end to new.</span>
                     <br> <br>
-                    <b>Responsobilities:</b>
+                    <b>Responsibilities:</b>
                     <ul class="description">
-                        <li>Writing code :)</li>
+                        <li>Vue 2 & Vue 3</li>
                         <li>Creation of the frontent architecture of the project (multi-lang, multi-brands, micro-frontend)</li>
                         <li>Hire and orginize front-end team</li>
                         <li>Planing roadmap, routine meetings with Product owner & Product manager</li>
